# husky-sql

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
calcite/: CMakeLists.txt  pom.xml
calcite/src/main/java/husky/sql/calcite/: Execute.java
calcite/src/main/java/husky/sql/calcite/Exceptions/: TableException.java
calcite/src/main/java/husky/sql/calcite/Schema/: TableSourceTable.java
calcite/src/main/java/husky/sql/calcite/Sources/: TableSource.java
calcite/src/main/java/husky/sql/calcite/plan/logical/: EnumerableToLogicalTableScan.java
calcite/src/main/java/husky/sql/calcite/plan/nodes/: CommonCalc.java  HuskyConventions.java  HuskyRelNode.java
calcite/src/main/java/husky/sql/calcite/plan/nodes/logical/: HuskyLogicalCalc.java  HuskyLogicalNativeTableScan.java  HuskyLogicalRel.java  HuskyLogicalTableScan.java  HuskyLogicalTableSourceScan.java
calcite/src/main/java/husky/sql/calcite/plan/nodes/logical/converter/: HuskyLogicalCalcConverter.java  HuskyLogicalNativeTableScanConverter.java  HuskyLogicalTableScanConverter.java  HuskyLogicalTableSourceScanConverter.java
calcite/src/main/java/husky/sql/calcite/plan/nodes/physical/: HuskyPhysicalRel.java
calcite/src/main/java/husky/sql/calcite/plan/rules/: HuskyRuleSets.java
calcite/src/main/java/husky/sql/calcite/plan/rules/logical/: PushFilterIntoTableScanRule.java  PushProjectIntoTableScanRule.java
calcite/src/main/java/husky/sql/calcite/plan/util/: InputRefVisitor.java  RexProgramExtractor.java  RexProgramRewriter.java
calcite/src/main/java/husky/sql/calcite/planner/: HuskyParquetQueryPlanner.java  HuskyPartsQueryPlanner.java  HuskyQueryPlanner.java  Husky_ORC_QueryPlanner.java  SimpleQueryPlanner.java
calcite/src/main/java/husky/sql/calcite/table/: ORCTestTable.java  ORCTestTableFactory.java  SimpleParquetTable.java  SimpleParquetTableFactory.java  SimplePartsTable.java  SimplePartsTableFactory.java  SimpleTestTable.java  SimpleTestTableFactory.java
calcite/src/main/resources/: ORC_table.json  model.json  sampleORC.json  table.json  target.json  test.txt
cmake/: Findgflags.cmake
husky-sql/: CMakeLists.txt
scripts/: clang-format.py  lint.py
test/: CMakeLists.txt  unittest_main.cpp
